--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,3 @@
 prefix: "!"
-token: "12396510498gmj0194c8g1m0394gjm"
+token: "NjcyOTU4NzY5NDk1Mjc3NTY5.XjTDxQ._3ZpKoAyjAXjmeHWpecYxW7Q29k"
 update-status: true
